r1 (0.1):
	* Primera versión del instalador