@@ -12,5 +12,5 @@ La Churrera te permita hacer de manera mas fácil juegos para los micro ordenado
 
 Puedes encontrar un tutorial de como usar la churrera en http://www.elmundodelspectrum.com/taller.php
 
-Esta es una versión temprana del programa que instala el compilador z88dk y las utilidades bas2tap y bin2tap
+Esta es una versión temprana del programa que instala el compilador z88dk y las utilidades bas2tap, bin2tap y SevenuP
 En un futuro se irán añadiendo el resto de herramientas. Para algunas de ellas de momento sera necesario usar Wine salvo que se encuentre su código fuente o un programa similar.
